# stig

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  hk.pkl
.github/workflows/: ci.yml  release.yml
src/: checksum.rs  config.rs  context.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs  snapshot.rs  sql.rs
src/cli/: backups.rs  generate.rs  guards.rs  init.rs  migrate.rs  mod.rs  new.rs  prompt.rs  redo.rs  reset.rs  restore.rs  schema.rs  status.rs
src/codegen/: mod.rs  typescript.rs
src/migrate/: apply.rs  directive.rs  discover.rs  mod.rs  plan.rs
src/schema/: diff.rs  mod.rs
tests/: cli_backups.rs  cli_generate.rs  cli_global_flags.rs  cli_init.rs  cli_migrate.rs  cli_new.rs  cli_redo.rs  cli_reset.rs  cli_restore.rs  cli_schema.rs  cli_schema_diff.rs  cli_status.rs  codegen_typescript.rs  integration.rs
tests/common/: mod.rs
tests/golden/: .gitkeep
tests/snapshots/: cli_status__all_applied.snap  cli_status__auto_snapshot_off.snap  cli_status__checksum_check_off.snap  cli_status__empty_migrations_dir.snap  cli_status__orphan_applied.snap  cli_status__pending_present.snap  cli_status__snapshot_pruned.snap  codegen_typescript__all_affinities.snap  codegen_typescript__check_in_enum.snap  codegen_typescript__exclude_glob.snap  codegen_typescript__multiple_tables.snap  codegen_typescript__nullable_and_defaults.snap  codegen_typescript__reserved_word_table_name.snap  codegen_typescript__rowid_alias.snap  codegen_typescript__schema_migrations_excluded.snap  codegen_typescript__text_primary_key.snap  codegen_typescript__without_rowid.snap
