[package]
name = "stig"
version = "0.1.0"
edition = "2024"

[lib]
name = "stig"

[[bin]]
name = "stig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hex = "0.4.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.2"
indoc = "2"
insta = { version = "1.47.2", features = ["yaml"] }
predicates = "3.1.4"
serial_test = "3"
tempfile = "3.27.0"
